# plumplay-backend

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  dockerfile  init_db.sql  pyproject.toml
docker/: backend.dockerfile  frontend.dockerfile
requirements/: requirements-dev.txt  requirements.txt
src/backend/: auth.py  manage.py
src/backend/ai_processor/: apps.py  consumers.py  llm.py  urls.py  views.py
src/backend/base/: asgi.py  medplum_proxy.py  settings.py  test_settings.py  urls.py  views.py
src/backend/chat/: urls.py  views.py
src/backend/chat/templates/: chat.html
src/base/: settings.py  test_settings.py
